<resources>
    <string name="app_name" translatable="false">MaterialEffects</string>
    <string name="buttons">Buttons</string>
    <string name="constraint_layout">Constraint layout</string>
    <string name="motion">Motion</string>
    <string name="scenes">Scenes</string>
    <string name="content_transitions">Content transitions</string>
    <string name="shared_elements_transitions">Shared elements transitions</string>
    <string name="instructive_motion">Instructive motion</string>
    <string name="interpolation">Interpolation</string>
    <string name="coordinated_motion">Coordinated motion</string>
    <string name="animated_vector_drawables">Animated Vector Drawables</string>
    <string name="about">About</string>
    <string name="created_by_colon">Created by:</string>
    <string name="mikolaj_ratajczyk" translatable="false">Mikołaj Ratajczyk</string>
    <string name="mikolaj_ratajczyk_at_gmail_com" translatable="false">mikolaj.ratajczyk@gmail.com</string>
    <string name="animated_path">Animated path</string>
    <string name="ripple_effect_on_a_custom_button">Ripple effect on a custom button</string>
    <string name="custom_button">Custom button</string>
    <string name="ripple_effect">Ripple effect</string>
    <string name="standard_ripple_effect">Standard ripple effect</string>
    <string name="circular_reveal_effect">Circular reveal effect</string>
    <string name="circular_reveal">Circular reveal</string>
    <string name="raise_effect_with_custom_z_translation">Raise effect with custom Z translation</string>
    <string name="custom_raise_effect">Custom raise effect</string>
    <string name="changing_visibility_of_the_group">Changing visibility of the group</string>
    <string name="simple_button">Simple button</string>
    <string name="simple_textview">Simple TextView</string>
    <string name="dynamically_replace_the_content_of_p">Dynamically replace the content of the Placeholder</string>
    <string name="change_content">Change content</string>
    <string name="aurora">Aurora</string>
    <string name="aurora_description">Auroras are produced when the magnetosphere is sufficiently disturbed by the solar wind that the trajectories of charged particles in both solar wind and magnetospheric plasma, mainly in the form of electrons and protons, precipitate them into the upper atmosphere (thermosphere/exosphere) due to Earth\'s magnetic field, where their energy is lost. The resulting ionization and excitation of atmospheric constituents emits light of varying color and complexity.</string>
    <string name="moving_cards">Moving cards</string>
    <string name="transforming_surfaces">Transforming surfaces</string>
    <string name="curved_motion">Curved motion</string>
    <string name="golden_gate_bridge">Golden Gate Bridge</string>
    <string name="golden_gate_bridge_location">San Francisco, California, U.S.</string>
    <string name="golden_gate_bridge_description">A suspension bridge spanning the Golden Gate, the one-mile-wide (1.6 km) strait connecting San Francisco Bay and the Pacific Ocean. The structure links the American city of San Francisco, California – the northern tip of the San Francisco Peninsula – to Marin County, carrying both U.S. Route 101 and California State Route 1 across the strait. The bridge is one of the most internationally recognized symbols of San Francisco, California, and the United States. It has been declared one of the Wonders of the Modern World by the American Society of Civil Engineers. The Frommer\'s travel guide describes the Golden Gate Bridge as \"possibly the most beautiful, certainly the most photographed, bridge in the world.\" At the time of its opening in 1937, it was both the longest and the tallest suspension bridge in the world, with a main span of 4,200 feet (1,280 m) and a total height of 746 feet (227 m). The color of the bridge is officially an orange vermilion called international orange. The color was selected by consulting architect Irving Morrow because it complements the natural surroundings and enhances the bridge\'s visibility in fog. Aesthetics was the foremost reason why the first design of Joseph Strauss was rejected. Upon re-submission of his bridge construction plan, he added details, such as lighting, to outline the bridge\'s cables and towers. In 1999, it was ranked fifth on the List of America\'s Favorite Architecture by the American Institute of Architects.</string>
    <string name="interpolation_example">Interpolation example</string>
    <string name="slide">Slide</string>
    <string name="reset">Reset</string>
    <string name="red_fox_short_description">The largest of the true foxes and one of the most widely distributed members of the order Carnivora.</string>
    <string name="red_fox">Red fox</string>
    <string name="red_fox_full_description">The red fox originated from smaller-sized ancestors from Eurasia during the Middle Villafranchian period, and colonised North America shortly after the Wisconsin glaciation. Among the true foxes, the red fox represents a more progressive form in the direction of carnivory. Apart from its large size, the red fox is distinguished from other fox species by its ability to adapt quickly to new environments. Despite its name, the species often produces individuals with other colourings, including albinos and melanists. Forty-five subspecies are currently recognised, which are divided into two categories: the large northern foxes, and the small, basal southern foxes of Asia and North Africa.</string>
    <string name="toast_nothing_was_chosen">Nothing was chosen</string>
    <string name="toast_stork_is_clickable">The stork is clickable</string>
    <string name="content_description_the_cross">the cross</string>
    <string name="content_description_strawberries">strawberries</string>
    <string name="content_description_koblenz_panorama">Koblenz panorama</string>
    <string name="content_description_stairs">stairs</string>
    <string name="content_description_flying_stork">flying stork</string>
    <string name="content_description_button">button</string>
    <string name="content_description_constraint_layout">constraint layout</string>
    <string name="content_description_motion">motion</string>
    <string name="content_description_content_transitions">content transitions</string>
    <string name="content_description_shared_elements_transitions">shared elements transitions</string>
    <string name="content_description_instructive_motion">instructive motion</string>
    <string name="content_description_interpolation">interpolation</string>
    <string name="content_description_coordinated_motion">coordinated motion</string>
    <string name="content_description_animated_vector_drawables">animated vector drawables</string>
    <string name="content_description_about">about</string>
    <string name="content_description_scenes">scenes</string>
    <string name="content_description_aurora">Aurora</string>
    <string name="content_description_golden_gate_bridge">Golden Gate Bridge</string>
    <string name="content_description_red_fox">Red Fox</string>
    <string name="content_description_information">information</string>
    <string name="content_description_close">close</string>
    <string name="content_description_a_parrot">A parrot</string>
    <string name="content_description_application_star_icon">Application star icon</string>
</resources>
