<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scenes_activity_detailed_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScenesActivity">

    <ImageView
        android:id="@+id/scenes_activity_fox_image"
        android:layout_width="248dp"
        android:layout_height="128dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image_fox" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scenes_activity_bar_root"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/scenes_activity_fox_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/red_fox"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/scenes_activity_fox_short_description_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/red_fox_short_description"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/scenes_activity_fox_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/scenes_activity_fox_title_textview" />

        <TextView
            android:id="@+id/scenes_activity_detailed_fox_full_description_textview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/red_fox_full_description"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/scenes_activity_fox_short_description_textview"
            app:layout_constraintTop_toBottomOf="@+id/scenes_activity_fox_short_description_textview" />

        <ImageButton
            android:id="@+id/scenes_activity_detailed_fox_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?android:selectableItemBackground"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/scenes_activity_fox_title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scenes_activity_fox_title_textview"
            app:srcCompat="@drawable/ic_close_black" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>